test.txt
[ 12%] Building CXX object CMakeFiles/lidar_reader.dir/src/lidar_reader.cpp.o
[ 25%] Building CXX object CMakeFiles/read_packets.dir/src/read_packets.cpp.o
/home/savindu/LiDAR_Interface/slam_lidar_cpp/src/lidar_reader.cpp: In constructor ‘LiDARReader::LiDARReader(const string&, int, int, bool)’:
/home/savindu/LiDAR_Interface/slam_lidar_cpp/src/lidar_reader.cpp:30:14: error: no matching function for call to ‘LiDARReader::setupSocket(int&)’
   30 |   setupSocket(port);
      |   ~~~~~~~~~~~^~~~~~
In file included from /home/savindu/LiDAR_Interface/slam_lidar_cpp/src/lidar_reader.cpp:4:
/home/savindu/LiDAR_Interface/slam_lidar_cpp/src/lidar_reader.hpp:29:8: note: candidate: ‘void LiDARReader::setupSocket(const string&, int)’
   29 |   void setupSocket(const std::string& host_ip, int port);
      |        ^~~~~~~~~~~
/home/savindu/LiDAR_Interface/slam_lidar_cpp/src/lidar_reader.hpp:29:8: note:   candidate expects 2 arguments, 1 provided
/home/savindu/LiDAR_Interface/slam_lidar_cpp/src/lidar_reader.cpp: At global scope:
/home/savindu/LiDAR_Interface/slam_lidar_cpp/src/lidar_reader.cpp:37:6: error: no declaration matches ‘void LiDARReader::setupSocket(int)’
   37 | void LiDARReader::setupSocket(int port) {
      |      ^~~~~~~~~~~
In file included from /home/savindu/LiDAR_Interface/slam_lidar_cpp/src/lidar_reader.cpp:4:
/home/savindu/LiDAR_Interface/slam_lidar_cpp/src/lidar_reader.hpp:29:8: note: candidate is: ‘void LiDARReader::setupSocket(const string&, int)’
   29 |   void setupSocket(const std::string& host_ip, int port);
      |        ^~~~~~~~~~~
/home/savindu/LiDAR_Interface/slam_lidar_cpp/src/lidar_reader.hpp:13:7: note: ‘class LiDARReader’ defined here
   13 | class LiDARReader {
      |       ^~~~~~~~~~~
make[2]: *** [CMakeFiles/lidar_reader.dir/build.make:76: CMakeFiles/lidar_reader.dir/src/lidar_reader.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:89: CMakeFiles/lidar_reader.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
[ 37%] Linking CXX executable read_packets
[ 37%] Built target read_packets
make: *** [Makefile:91: all] Error 2
